<resources>
    <string name="app_name">chatAPP</string>
    <string name="chat_app">Chat APP</string>
    <string name="my_profile">My Profile</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sing_up">SING UP</string>
    <string name="todo">TODO</string>
    <string name="join_us">Join Us !</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="user_name">User Name</string>
    <string name="hidden_password">Hidden Password</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">NAME</string>
    <string name="your_name">Your Name</string>
    <string name="save">SAVE</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="messages">MESSAGES</string>
    <string name="messagemin">Message</string>
    <string name="send_message">Send Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>