<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peakpx"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="271dp"
        android:layout_height="44dp"
        android:layout_marginTop="-25dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/join_us"
        android:textAlignment="center"
        android:textColor="#9CA39292"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="257dp"
        android:layout_height="206dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginBottom="-100dp"
        android:background="@drawable/view_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <EditText
        android:id="@+id/editTextUserMail"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/view_edit"
        android:ems="10"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.896"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextUserPassword"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/view_edit"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:onClick="userLogin"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddFriends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddFriends"
        android:layout_width="318dp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_background"
        android:onClick="goSingUp"
        android:text="@string/sing_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/hiddenButton"
        android:layout_width="52dp"
        android:layout_height="31dp"
        android:background="#00FFFFFF"
        android:onClick="hiddenPassword"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/editTextUserPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextUserPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextUserPassword"
        app:srcCompat="@drawable/hidden"
        android:contentDescription="@string/hidden_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="322dp"
        android:layout_height="92dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/chat_app"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

</androidx.constraintlayout.widget.ConstraintLayout>