<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peakpx"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="UseCompoundDrawables"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:paddingStart="20dp"
            android:text="@string/chat_app"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"/>

        <ImageButton
            android:id="@+id/buttonLogout"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/logout_button_background"
            android:importantForAccessibility="no"
            android:onClick="userLogout"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/power" />


    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageProfile"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/profile_image"
            app:civ_border_color="@color/white"
            app:civ_border_width="3sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="-25dp"
        android:layout_gravity="center"
        app:cardCornerRadius="100000dp"
        android:id="@+id/buttonChangeProfileİmage">

        <ImageButton
            android:id="@+id/changeImage"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:onClick="openImageFolder"
            android:scaleType="fitCenter"
            android:src="@drawable/pen"
            android:contentDescription="@string/change_profile_photo" />

    </androidx.cardview.widget.CardView>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:text="@string/name"
            android:textColor="#BEFFFFFF" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/profile_edit_desing"
            android:layout_gravity="center"
            android:paddingStart="15dp"
            android:text="@string/your_name"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:onClick="uploadData"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>